syntax = "proto3";

option java_multiple_files = true;
option java_package = "ppr.ru.integrationservice.grpc.generated";
option java_outer_classname = "OrderProto";

package order;

// Order Service for MongoDB-backed orders
service OrderService {
    // Query operations
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc GetOrderById(GetOrderByIdRequest) returns (OrderResponse);
    rpc GetOrdersByCustomerId(GetOrdersByCustomerIdRequest) returns (GetOrdersResponse);
    rpc GetOrdersByStatus(GetOrdersByStatusRequest) returns (GetOrdersResponse);

    // Mutation operations
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

// ==================== Query Requests ====================

message GetOrdersRequest {
    // Empty request to get all orders
}

message GetOrderByIdRequest {
    string id = 1;
}

message GetOrdersByCustomerIdRequest {
    string customer_id = 1;
}

message GetOrdersByStatusRequest {
    OrderStatus status = 1;
}

// ==================== Mutation Requests ====================

message CreateOrderRequest {
    string customer_id = 1;
    repeated OrderItemInput items = 2;
}

message OrderItemInput {
    int64 product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double unit_price = 4;
}

message UpdateOrderStatusRequest {
    string id = 1;
    OrderStatus status = 2;
}

message DeleteOrderRequest {
    string id = 1;
}

// ==================== Responses ====================

message GetOrdersResponse {
    repeated Order orders = 1;
}

message OrderResponse {
    Order order = 1;
    bool found = 2;
}

message DeleteOrderResponse {
    bool success = 1;
}

// ==================== Domain Messages ====================

message Order {
    string id = 1;
    string customer_id = 2;
    repeated OrderItem items = 3;
    double total = 4;
    OrderStatus status = 5;
    string created_at = 6;
    string updated_at = 7;
}

message OrderItem {
    int64 product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double unit_price = 4;
    double subtotal = 5;
}

enum OrderStatus {
    PENDING = 0;
    CONFIRMED = 1;
    PROCESSING = 2;
    SHIPPED = 3;
    DELIVERED = 4;
    CANCELLED = 5;
}
